--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -228,7 +228,7 @@ code,
 kbd,
 pre,
 samp {
-  font-family: monospace, monospace;
+  font-family: "Source Code Pro", Monaco, Menlo, Consolas, "Courier New", monospace;
   font-size: 1em;
 }
 
